style: переобъявлены переменные

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="popup__container">
         <div class="button button_type_close"></div>
         <h3 class="popup__title">Редактировать профиль</h3>
-        <form action="" class="popup__form">
+        <form class="popup__form">
           <input class="popup__input popup__input_type_name" type="text">
           <input class="popup__input popup__input_type_feature" type="text">
           <button class="button button_type_save" type="submit">Сохранить</button>
