--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
-  <title>Document</title>
+  <title>Места России и не только</title>
 </head>
 <body class="page">
   <div class="page__container">
     <header class="header">
         <img class="header__logo" src="./images/logo.svg" alt="Логотип">
     </header>
+    <div class="borderline"></div>
     <main class="main">
       <section class="profile">
         <div class="profile__person">
           <img src="./images/avatar.jpg" alt="Аватар" class="profile__photo">
           <div class="profile__info">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class=" button button_type_edit" type="button"></button>
+            <button class=" button button_type_edit" aria-label="Редактировать" type="button"></button>
             <p class="profile__feature">Исследователь океана</p>
           </div>
         </div> 
-        <button class="button button_type_add" type="button"></button>
+        <button class="button button_type_add" aria-label="Добавить фото" type="button"></button>
       </section>
       <section class="cards-list">
         <article class="card">
@@ -41,7 +42,7 @@
         <article class="card">
           <img class="card__image" src="./images/pereslavl.jpg" alt="Переславль">         
           <div class="card__description">
-            <h2 class="card__name">Переславль-Залесский</h2>
+            <h2 class="card__name">Карачаево-Черкесия</h2>
             <button class="button button_type_like" type="button"></button>
           </div>
         </article>
@@ -73,11 +74,11 @@
     </footer>
     <div class="popup popup_type_edit" >
       <div class="popup__container">
-        <div class="button button_type_close"></div>
+        <button class="button button_type_close"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
-        <form action="" class="popup__form">
-          <input class="popup__input popup__input_type_name" type="text">
-          <input class="popup__input popup__input_type_feature" type="text">
+        <form name=editForm action="" class="popup__form">
+          <input name="editName" class="popup__input popup__input_type_name" type="text">
+          <input name="editFeature" class="popup__input popup__input_type_feature" type="text">
           <button class="button button_type_save" type="submit">Сохранить</button>
         </form>
       </div>
