--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <div class="profile__person">
           <img src="./images/avatar.jpg" alt="Аватар" class="profile__photo">
           <div class="profile__info">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class=" button button_type_edit" aria-label="Редактировать" type="button"></button>
+            <div class="profile__name-wrap">
+              <h1 class="profile__name">Жак-Ив Кусто</h1>
+              <button class=" button button_type_edit" aria-label="Редактировать" type="button"></button>
+            </div>
             <p class="profile__feature">Исследователь океана</p>
           </div>
         </div> 
@@ -29,42 +31,42 @@
           <img class="card__image" src="./images/goa.jpg" alt="Гоа">
           <div class="card__description">
             <h2 class="card__name">Гоа</h2>
-            <button class="button button_type_like" type="button"></button>
+            <button class="button button_type_like" aria-label="Лайк" type="button"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/kazan.jpg" alt="Казань">
           <div class="card__description">
             <h2 class="card__name">Казань</h2>
-            <button class="button button_type_like" type="button"></button>
+            <button class="button button_type_like" aria-label="Лайк" type="button"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/pereslavl.jpg" alt="Переславль">         
           <div class="card__description">
             <h2 class="card__name">Карачаево-Черкесия</h2>
-            <button class="button button_type_like" type="button"></button>
+            <button class="button button_type_like" aria-label="Лайк" type="button"></button>
           </div>
         </article>
         <article class="card">          
           <img class="card__image" src="./images/dzer.jpg" alt="Дзержинск">         
           <div class="card__description">
             <h2 class="card__name">Дзержинск</h2>
-            <button class="button button_type_like" type="button"></button>
+            <button class="button button_type_like" aria-label="Лайк" type="button"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/panaji.jpg" alt="Панаджи">
           <div class="card__description">
             <h2 class="card__name">Панаджи</h2>
-            <button class="button button_type_like" type="button"></button>
+            <button class="button button_type_like" aria-label="Лайк" type="button"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/sergiev.jpg" alt="Сергиев Посад">
           <div class="card__description">
             <h2 class="card__name">Сергиев Посад</h2>
-            <button class="button button_type_like" type="button"></button>
+            <button class="button button_type_like" aria-label="Лайк" type="button"></button>
           </div>
         </article>
       </section>
@@ -74,11 +76,11 @@
     </footer>
     <div class="popup popup_type_edit" >
       <div class="popup__container">
-        <button class="button button_type_close"></button>
+        <button class="button button_type_close" aria-label="Закрыть"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
-        <form name=editForm action="" class="popup__form">
-          <input name="editName" class="popup__input popup__input_type_name" type="text">
-          <input name="editFeature" class="popup__input popup__input_type_feature" type="text">
+        <form name=edit action="#" class="popup__form">
+          <input name="name" class="popup__input popup__input_type_name" type="text">
+          <input name="feature" class="popup__input popup__input_type_feature" type="text">
           <button class="button button_type_save" type="submit">Сохранить</button>
         </form>
       </div>
