feat: добавить кнопку удаления

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <section class="cards-list">
         <article class="card">
           <img class="card__image" src="./images/goa.jpg" alt="Гоа">
+          <button class="button button_type_delete" aria-label="Удалить" type="button"></button>
           <div class="card__description">
             <h2 class="card__name">Гоа</h2>
             <button class="button button_type_like" aria-label="Лайк" type="button"></button>
@@ -85,6 +86,14 @@
         </form>
       </div>
     </div>
+    <template class="card">
+      <img class="card__image">
+      <button class="button button_type_delete" aria-label="Удалить" type="button"></button>       
+      <div class="card__description">
+        <h2 class="card__name"></h2>
+        <button class="button button_type_like" aria-label="Лайк" type="button"></button>
+      </div>
+    </article>
   </div>
   <script src="./scripts/index.js"></script>
 </body>
