--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button class="button button_type_add" aria-label="Добавить фото" type="button"></button>
       </section>
       <section class="cards-list">
-        <article class="card">
+        <!-- <article class="card">
           <img class="card__image" src="./images/goa.jpg" alt="Гоа">
           <button class="button button_type_delete" aria-label="Удалить" type="button"></button>
           <div class="card__description">
@@ -66,7 +66,7 @@
             <h2 class="card__name">Сергиев Посад</h2>
             <button class="button button_type_like" aria-label="Лайк" type="button"></button>
           </div>
-        </article>
+        </article> -->
       </section>
     </main>
     <footer class="footer">
@@ -83,14 +83,16 @@
         </form>
       </div>
     </div>
-    <template class="card">
-      <img class="card__image">
-      <button class="button button_type_delete" aria-label="Удалить" type="button"></button>       
-      <div class="card__description">
-        <h2 class="card__name"></h2>
-        <button class="button button_type_like" aria-label="Лайк" type="button"></button>
-      </div>
-    </article>
+    <template class="card_template">
+      <article class="card">
+        <img class="card__image">
+       <button class="button button_type_delete" aria-label="Удалить" type="button"></button>       
+        <div class="card__description">
+         <h2 class="card__name"></h2>
+         <button class="button button_type_like" aria-label="Лайк" type="button"></button>
+       </div>
+      </article>
+    </template>
   </div>
   <script src="./scripts/index.js"></script>
 </body>
