feat: добавить добавление карточек, разворачивание

--- a/index.html
+++ b/index.html
@@ -31,13 +31,33 @@
     </footer>
     <div class="popup popup_type_edit">
       <div class="popup__container">
-        <button class="button button_type_close" aria-label="Закрыть"></button>
+        <button class="button button_type_close button_type_close-edit" aria-label="Закрыть"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
         <form name="edit" action="#" class="popup__form">
           <input name="name" class="popup__input popup__input_type_name" type="text">
           <input name="feature" class="popup__input popup__input_type_feature" type="text">
-          <button class="button button_type_save" type="submit">Сохранить</button>
+          <button class="button button_type_submit" type="submit">Сохранить</button>
         </form>
+      </div>
+    </div>
+    <div class="popup popup_type_add">
+      <div class="popup__container">
+        <button class="button button_type_close button_type_close-add" aria-label="Закрыть"></button>
+        <h3 class="popup__title">Новое место</h3>
+        <form name="add-card" action="#" class="popup__form">
+          <input name="-place-name" class="popup__input popup__input_type_place-name" placeholder="Название" type="text">
+          <input name="place-link" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" type="text">
+          <button class="button button_type_submit" type="submit">Создать</button>
+        </form>
+      </div>
+    </div>
+    <div class="popup popup_type_image">
+      <div class="popup__image-wrapper">
+        <button class="button button_type_close button_type_close-image" aria-label="Закрыть"></button>
+        <figure class="popup__figure">
+          <img class="popup__fig-image">
+          <figcaption class="popup__fig-caption"></figcaption>
+        </figure>
       </div>
     </div>
     <template class="card_template">
