--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
       </article>
     </template>
   </div>
-  <script src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/card.js"></script>
   <script src="./scripts/validate.js"></script>
 </body>
 
