--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </div>
   <script type="module" src="./scripts/index.js"></script>
   <script type="module" src="./scripts/card.js"></script>
-  <script src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/validate.js"></script>
 </body>
 
 </html>
