fix: исправить ошибки автотеста

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
       <div class="popup__image-wrapper">
         <button class="button button_type_close button_type_close-image" aria-label="Закрыть"></button>
         <figure class="popup__figure">
-          <img class="popup__fig-image" src="" alt="">
+          <img class="popup__fig-image" src="#" alt="#">
           <figcaption class="popup__fig-caption"></figcaption>
         </figure>
       </div>
     </div>
     <template class="card-template">
       <article class="card">
-        <img class="card__image" src="" alt="">
+        <img class="card__image" src="#" alt="#">
         <button class="button button_type_delete" aria-label="Удалить" type="button"></button>       
         <div class="card__description">
           <h2 class="card__name"></h2>
