--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         <h3 class="popup__title">Новое место</h3>
         <form name="add-card" action="#" class="popup__form" novalidate>
           <label class="popup__label">
-            <input id="place-name" name="place-name" required class="popup__input popup__input_type_place-name" placeholder="Название" type="text"
+            <input id="place-name" name="name" required class="popup__input popup__input_type_place-name" placeholder="Название" type="text"
             minlength="2" maxlength="30">
             <span class="popup__error" id="place-name-error"></span>
           </label>
           <label class="popup__label">
-            <input id="place-link" name="place-link" required class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" type="url">
+            <input id="place-link" name="link" required class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" type="url">
             <span class="popup__error" id="place-link-error"></span>
           </label>
           <button class="button button_type_submit" type="submit">Создать</button>
@@ -86,7 +86,7 @@
       </article>
     </template>
   </div>
-  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./pages/index.js"></script>
 </body>
 
 </html>
