--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Места России и не только</title>
 </head>
 
 <body class="page">
   <div class="page__container">
     <header class="header">
-      <img class="header__logo" src="./images/logo.svg" alt="Логотип">
+      <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Логотип">
     </header>
     <main class="main">
       <section class="profile">
-        <img src="./images/avatar.jpg" alt="Аватар" class="profile__photo">
+        <img src="<%=require('./images/avatar.jpg')%>" alt="Аватар" class="profile__photo">
         <div class="profile__info">
           <div class="profile__name-wrap">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -86,7 +85,6 @@
       </article>
     </template>
   </div>
-  <script type="module" src="./pages/index.js"></script>
 </body>
 
 </html>
