--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,9 @@
     </div>
     <div class="popup popup_type_submit">
       <div class="popup__container">
-        <button class="button button_type_close button_type_close-add" aria-label="Закрыть"></button>
-        <h3 class="popup__title">Редактировать профиль</h3>
+        <button class="button button_type_close" aria-label="Закрыть"></button>
+        <h3 class="popup__title">Вы уверены?</h3>
+        <button class="button button_type_submit" type="submit">Да</button>
       </div>
     </div>
     <div class="popup popup_type_add">
