--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,10 @@
     </header>
     <main class="main">
       <section class="profile">
-        <img src="<%=require('./images/avatar.jpg')%>" alt="Аватар" class="profile__photo">
+        <div class="profile__avatar-container">
+          <img src="<%=require('./images/avatar.jpg')%>" alt="Аватар" class="profile__photo">
+          <button class="profile__edit-avatar"></button>
+        </div>
         <div class="profile__info">
           <div class="profile__name-wrap">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -51,7 +54,9 @@
       <div class="popup__container">
         <button class="button button_type_close" aria-label="Закрыть"></button>
         <h3 class="popup__title">Вы уверены?</h3>
-        <button class="button button_type_submit" type="submit">Да</button>
+        <form action="#" class="popup__form" name="confirm-delete" novalidate>
+          <button class="button button_type_submit" type="submit">Да</button>
+        </form>
       </div>
     </div>
     <div class="popup popup_type_add">
@@ -89,7 +94,7 @@
           <h2 class="card__name"></h2>
           <div class="card__likes">  
             <button class="button button_type_like" aria-label="Лайк" type="button"></button>
-            <span class="card__like-counter">0</span>
+            <span class="card__like-counter"></span>
         </div>
         </div>
       </article>
