--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,15 @@
     <main class="main">
       <section class="profile">
         <div class="profile__avatar-container">
-          <img src="<%=require('./images/avatar.jpg')%>" alt="Аватар" class="profile__photo">
+          <img src="#" alt="Аватар" class="profile__photo">
           <button class="profile__edit-avatar"></button>
         </div>
         <div class="profile__info">
           <div class="profile__name-wrap">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <h1 class="profile__name"></h1>
             <button class=" button button_type_edit" aria-label="Редактировать" type="button"></button>
           </div>
-          <p class="profile__feature">Исследователь океана</p>
+          <p class="profile__feature"></p>
         </div>
         <button class="button button_type_add" aria-label="Добавить фото" type="button"></button>
       </section>
@@ -35,7 +35,7 @@
     </footer>
     <div class="popup popup_type_edit">
       <div class="popup__container">
-        <button class="button button_type_close button_type_close-edit" aria-label="Закрыть"></button>
+        <button class="button button_type_close " aria-label="Закрыть"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
         <form name="edit" action="#" class="popup__form" novalidate>
           <label class="popup__label">
@@ -65,18 +65,31 @@
         <h3 class="popup__title">Новое место</h3>
         <form name="add-card" action="#" class="popup__form" novalidate>
           <label class="popup__label">
-            <input id="place-name" name="name" required class="popup__input popup__input_type_place-name" placeholder="Название" type="text"
+            <input id="place-name" name="name" required class="popup__input" placeholder="Название" type="text"
             minlength="2" maxlength="30">
             <span class="popup__error" id="place-name-error"></span>
           </label>
           <label class="popup__label">
-            <input id="place-link" name="link" required class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" type="url">
+            <input id="place-link" name="link" required class="popup__input" placeholder="Ссылка на картинку" type="url">
             <span class="popup__error" id="place-link-error"></span>
           </label>
           <button class="button button_type_submit" type="submit">Создать</button>
         </form>
       </div>
-    </div>
+    </div>  
+    <div class="popup popup_type_edit-avatar">
+      <div class="popup__container">
+        <button class="button button_type_close" aria-label="Закрыть"></button>
+        <h3 class="popup__title">Обновить аватар</h3>
+        <form name="edit-avatar" action="#" class="popup__form" novalidate>
+          <label class="popup__label">
+            <input id="edit-avatar" name="avatar" required class="popup__input" placeholder="Введите ссылку на фото" type="url">
+            <span class="popup__error" id="edit-avatar-error"></span>
+          </label>
+            <button class="button button_type_submit" type="submit">Сохранить</button>
+        </form>
+      </div>
+    </div>  
     <div class="popup popup_type_image">
       <div class="popup__image-wrapper">
         <button class="button button_type_close button_type_close-image" aria-label="Закрыть"></button>
